# krb5

./: .Sanitize  .gitignore  .travis-ci.sh  .travis.yml  Makefile  NOTICE  README  README.BRANCH  TODO  appveyor.yml  blocking-bugs  implementation.notes  pre-merge-issues  ptest.c  setup.sh
src/: .Sanitize  .cvsignore  .rconf  BADSYMS  CHANGELOG  CHANGES  ChangeLog  Doxyfile  IDEAS  Imakefile  Link_src.sh  Makefile  Makefile.in  Makefile.ini  Sandia-changes  TODO  acconfig.h  aclocal.m4  configure.ac  configure.in  krb5-config.M  krb5-config.in  patchlevel.h  t_krbconf  version.m4  wconfig.c
src/admin/: .Sanitize  ChangeLog  Imakefile  Makefile.in  configure.in
src/appl/: .Sanitize  .rconf  ChangeLog  Imakefile  Makefile.in  configure.in
src/autotools/: default-in-prefix  makeaclocals  reconf
src/build-tools/: Makefile.in  kadm-client.pc.in  kdb.pc.in  krb5-config.in  mit-krb5.pc.in
src/ccapi/: Makefile.in
src/clients/: .Sanitize  ChangeLog  Imakefile  Makefile.in  configure.in
src/config/: .Sanitize  ChangeLog  Imake.rules  Imake.rules.foo  Imake.tmpl  Imake.tmpl-xcomp  Imakefile  Makefile.ini  Project.tmpl  README  ccimake  ccimake.c  config.guess  config.sub  ibm.cf  ibmLib.rules  imake  imake.c  imake.man  imakemdep.h  lib.in  libnover.in  libobj.in  linux.cf  mac-config.README  mac-config.cache  mac-mf.sed  mac-post.in  mac-pre.in  next.cf  post.in  pre.in  rm.bat  shlib.conf  site.def  site.def.example  sun.cf  tahoebsd.cf  ultrix.cf  vaxbsd.cf  (+4 more)
src/config-files/: .Sanitize  ChangeLog  Imakefile  Makefile.in  configure.in  kdc.conf  kdc.conf.M  krb.conf  krb.conf.M  krb.realms  krb.realms.M  krb5.conf  krb5.conf.M  mech  services.append
src/doc/: Doxyfile.in  Makefile.in
src/gen-manpages/: ChangeLog  Makefile.in  header.doc  k5identity.M  k5login.M  kerberos.M
src/include/: .Sanitize  .cvsignore  .rconf  ChangeLog  ChangeLog.krb5  CredentialsCache.h  CredentialsCache2.h  Imakefile  Makefile.in  adm.h  adm_proto.h  bsdlib.h  bstring.h  cm.h  configure.in  copyright.h  des.h  fake-addrinfo.c  fake-addrinfo.h  fake-stdlib.h  fast_factor.h  foreachaddr.c  foreachaddr.h  gssapi.h  iprop.h  iprop_hdr.h  k5-buf.h  k5-err.h  k5-gmt_mktime.h  k5-int-pkinit.h  k5-int.h  k5-ipc_stream.h  k5-json.h  k5-label.h  k5-locate.h  k5-platform.h  k5-plugin.h  k5-queue.h  k5-regex.h  k5-thread.h  (+26 more)
src/iprop/: Makefile.iprop  iprop.h  iprop.x  iprop_client.c  iprop_clnt.c  iprop_hdr.h  iprop_server.c  iprop_svc.c  iprop_xdr.c
src/isode/: .Sanitize  ChangeLog  Makefile.in  configure.in
src/kadmin/: .Sanitize  ChangeLog  Imakefile  Makefile.in  Makefile.ov  configure.in
src/kadmin.new/: .Sanitize  ChangeLog
src/kadmin.old/: .Sanitize  ChangeLog  configure.in
src/kadmin.v4/: .Sanitize  ChangeLog  Makefile.in  configure.in
src/kdc/: .Sanitize  .cvsignore  .rconf  .saberinit  ChangeLog  Imakefile  Makefile.in  cammac.c  configure.in  cookies.c  cookies.h  deps  dispatch.c  do_as_req.c  do_tgs_req.c  enc_challenge.c  enc_challenge.h  extern.c  extern.h  fakeka.M  fakeka.c  fast_util.c  kdc5_err.et  kdc_audit.c  kdc_authdata.c  kdc_log.c  kdc_preauth.c  kdc_preauth_ec.c  kdc_preauth_encts.c  kdc_request_queue.c  kdc_request_queue.h  kdc_transit.c  kdc_util.c  kdc_util.h  kerberos_v4.c  krb5kdc.M  main.c  migration.doc  ndr.c  network.c  (+18 more)
src/kprop/: kprop.c  kprop_util.c  kpropd.c  kproplog.c  replica_update
src/krb524/: .Sanitize  .cvsignore  ChangeLog  Makefile  Makefile.in  README  RELEASE_NOTES  cnv_tkt_skey.c  configure.in  conv_creds.c  conv_princ.c  conv_tkt.c  conv_tkt_skey.c  encode.c  getcred.c  globals.c  k524init.M  k524init.c  krb524.c  krb524.def  krb524.h  krb524_err.et  krb524d.M  krb524d.c  krb524d.h  libinit.c  misc.c  sendmsg.c  test.c
src/lib/: .Sanitize  .cvsignore  .rconf  ChangeLog  Imakefile  Makefile.in  comerr16.def  comerr32.def  configure.in  exports.crypto  exports.des425  exports.kdb5  exports.krb5  glue4.c  gssapi.def  gssapi16.def  gssapi32.def  krb4_16.def  krb4_32.def  krb5.rc  krb5.saber.source  krb5_16.def  krb5_32.def  libkrb5.def  sapgss16.def  sapkrb16.def  sapkrb5.def  win_glue.c  winsock.def  xpprof16.def  xpprof32.def
src/mac/: CFMGlue.pl  CFMglue.c  ChangeLog  ComErrLib ReadMe  ComErrLib.glue.h  ComErrLib.glue.post.cin  ComErrLib.glue.pre.cin  ComErrLib.glue.proto.h  DylibStub.c  ErrorTables.jam  FragmentAlias.mpw  GSS.CFM.c  GSS.CFMGlue.h  GSS.CFMglue.cin  GSS.CFMglue.proto.h  GSS.h  GSS.moreCFMglue.cin  GSSKerberosPrefix.h  GSSLib ReadMe  GSSLib.glue.h  GSSLibrary.SAP.exp  GSSLibrary.exp  GSSLibrary.pbexp  GenerateErrorTables.sh  GenerateHeaderFiles.sh  HeaderFiles.jam  Icons.rsrc  K5.CFM.c  K5.CFMGlue.h  K5.CFMglue.c  K5.CFMglue.cin  K5.CFMglue.proto.h  K5.moreCFMglue.cin  K5Library.exp  Kerberos5CoreExport.jam  Kerberos5Lib.exp  Kerberos5Lib.pbexp  Kerberos5PrivateLib.pbexp  KerberosProfileLib ReadMe  KrbProfileLib.glue.h  (+25 more)
src/man/: Makefile.in  README  k5identity.5  k5identity.man  k5login.5  k5login.man  k5srvutil.1  k5srvutil.man  kadm5.acl.man  kadmin.1  kadmin.man  kadmind.8  kadmind.man  kdb5_ldap_util.8  kdb5_ldap_util.man  kdb5_util.8  kdb5_util.man  kdc.conf.5  kdc.conf.man  kdestroy.1  kdestroy.man  kerberos.man  khostrealm.man  kinit.1  kinit.man  klist.1  klist.man  kpasswd.1  kpasswd.man  kprop.8  kprop.man  kpropd.8  kpropd.man  kproplog.8  kproplog.man  krb5-config.man  krb5-send-pr.man  krb5.conf.5  krb5.conf.man  krb5kdc.8  (+11 more)
src/plugin_core/: Makefile.in  deps  krb5_parser.c  krb5_parser.h  libplugin_core.exports  plugin_factory.c  plugin_factory.h  plugin_loader.c  plugin_loader.h  plugin_manager.c  plugin_manager.h  yaml_parser.c  yaml_parser.h
src/plugin_dynamic/: Makefile.in  deps  libplugin_dynamic.exports  plugin_dyn_factory.c  plugin_dyn_factory.h  plugin_dyn_loader.c  plugin_dyn_loader.h
src/po/: Makefile.in  de.po  mit-krb5.pot
src/prototype/: .Sanitize  ChangeLog  getopt.c  prototype.c  prototype.h
src/slave/: .Sanitize  .cvsignore  ChangeLog  Imakefile  Makefile.in  configure.in  deps  kprop.M  kprop.c  kprop.h  kprop_sock.c  kprop_util.c  kpropd.M  kpropd.c  kpropd_rpc.c  kproplog.M  (+2 more)
(+8083 files in other folders)
